--- a/Exercise2/CLIUtility.ipynb
+++ b/Exercise2/CLIUtility.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "83e47e7f",
    "metadata": {},
    "outputs": [
@@ -48,12 +48,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df74742f",
+   "metadata": {},
+   "source": [
+    "Generate a print_json function that prints the output when --print command is used"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8fe3cce4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_json(json_file_path):\n",
+    "    \"\"\"Print the contents of a JSON file to the screen.\"\"\"\n",
+    "    with open(json_file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    print(json.dumps(data, indent=4))\n",
+    "\n",
+    "# Example usage for CLI:\n",
+    "# python script.py input.csv output.json --print\n",
+    "if __name__ == \"__main__\":\n",
+    "    if len(sys.argv) < 3:\n",
+    "        print(\"Usage: python script.py <input_csv> <output_json> [--print]\")\n",
+    "    else:\n",
+    "        csv_json(sys.argv[1], sys.argv[2])\n",
+    "        if len(sys.argv) > 3 and sys.argv[3] == \"--print\":\n",
+    "            print_json(sys.argv[2])"
+   ]
   }
  ],
  "metadata": {
