Generating a csv file for testing

--- a/Exercise2/CLIUtility.ipynb
+++ b/Exercise2/CLIUtility.ipynb
@@ -78,6 +78,39 @@
     "        if len(sys.argv) > 3 and sys.argv[3] == \"--print\":\n",
     "            print_json(sys.argv[2])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d56c4af1",
+   "metadata": {},
+   "source": [
+    "Generate a csv file with mock data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2faeebb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate simple CSV mock data for testing\n",
+    "import csv\n",
+    "\n",
+    "mock_csv_path = \"mock_data.csv\"\n",
+    "mock_data = [\n",
+    "    {\"name\": \"Alice\", \"age\": 30, \"city\": \"New York\"},\n",
+    "    {\"name\": \"Bob\", \"age\": 25, \"city\": \"Los Angeles\"},\n",
+    "    {\"name\": \"Charlie\", \"age\": 35, \"city\": \"Chicago\"}\n",
+    " ]\n",
+    "\n",
+    "with open(mock_csv_path, mode='w', newline='', encoding='utf-8') as file:\n",
+    "    writer = csv.DictWriter(file, fieldnames=[\"name\", \"age\", \"city\"])\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(mock_data)\n",
+    "\n",
+    "print(f\"Mock CSV data written to {mock_csv_path}\")"
+   ]
   }
  ],
  "metadata": {
