Added a function with --table option to display the output as a table

--- a/Exercise2/CLIUtility.ipynb
+++ b/Exercise2/CLIUtility.ipynb
@@ -88,6 +88,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b52146e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_json_table(json_file_path):\n",
+    "    \"\"\"Print the contents of a JSON file as a table.\"\"\"\n",
+    "    import json\n",
+    "    from tabulate import tabulate\n",
+    "    with open(json_file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    if isinstance(data, list) and data:\n",
+    "        print(tabulate(data, headers=\"keys\", tablefmt=\"grid\"))\n",
+    "    else:\n",
+    "        print(\"No data to display as table.\")\n",
+    "\n",
+    "# Update CLI logic to support --table command\n",
+    "if __name__ == \"__main__\":\n",
+    "    if len(sys.argv) < 3:\n",
+    "        print(\"Usage: python script.py <input_csv> <output_json> [--print|--table]\")\n",
+    "    else:\n",
+    "        csv_json(sys.argv[1], sys.argv[2])\n",
+    "        if len(sys.argv) > 3:\n",
+    "            if sys.argv[3] == \"--print\":\n",
+    "                print_json(sys.argv[2])\n",
+    "            elif sys.argv[3] == \"--table\":\n",
+    "                try:\n",
+    "                    from tabulate import tabulate\n",
+    "                except ImportError:\n",
+    "                    print(\"Installing tabulate module...\")\n",
+    "                    import subprocess\n",
+    "                    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"tabulate\"])\n",
+    "                    from tabulate import tabulate\n",
+    "                print_json_table(sys.argv[2])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d56c4af1",
    "metadata": {},
@@ -125,7 +163,7 @@
    "id": "73842300",
    "metadata": {},
    "source": [
-    "Write a main function to test the code of csv_json and --pretty"
+    "Write a main function to test the code of csv_json and --print"
    ]
   },
   {
@@ -175,9 +213,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37bea90f",
+   "metadata": {},
+   "source": [
+    "Generate a function to use --table option to display the data as a table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0ab0aa80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to display JSON data as a table (for notebook usage)\n",
+    "def display_json_table(json_file_path):\n",
+    "    try:\n",
+    "        from tabulate import tabulate\n",
+    "    except ImportError:\n",
+    "        import sys, subprocess\n",
+    "        print(\"Installing tabulate module...\")\n",
+    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"tabulate\"])\n",
+    "        from tabulate import tabulate\n",
+    "    import json\n",
+    "    with open(json_file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    if isinstance(data, list) and data:\n",
+    "        print(tabulate(data, headers=\"keys\", tablefmt=\"grid\"))\n",
+    "    else:\n",
+    "        print(\"No data to display as table.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab0aa80",
+   "id": "f4180666",
    "metadata": {},
    "outputs": [],
    "source": []
