Added notebooks for presentation

--- a/Exercise2/CLIUtility.ipynb
+++ b/Exercise2/CLIUtility.ipynb
@@ -246,12 +246,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5921aea",
+   "metadata": {},
+   "source": [
+    "Generate a function to test the --table command"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f4180666",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV to JSON conversion complete. Table output:\n",
+      "+---------+-------+-------------+\n",
+      "| name    |   age | city        |\n",
+      "+=========+=======+=============+\n",
+      "| Alice   |    30 | New York    |\n",
+      "+---------+-------+-------------+\n",
+      "| Bob     |    25 | Los Angeles |\n",
+      "+---------+-------+-------------+\n",
+      "| Charlie |    35 | Chicago     |\n",
+      "+---------+-------+-------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Main function to test the --table command automatically\n",
+    "def main_test_table():\n",
+    "    csv_file = \"mock_data.csv\"\n",
+    "    json_file = \"mock_data.json\"\n",
+    "    # Convert CSV to JSON\n",
+    "    csv_json(csv_file, json_file)\n",
+    "    print(\"CSV to JSON conversion complete. Table output:\")\n",
+    "    # Display JSON as table (simulating --table)\n",
+    "    display_json_table(json_file)\n",
+    "\n",
+    "# Run the table test\n",
+    "main_test_table()"
+   ]
   }
  ],
  "metadata": {
