Added comments and additional notes

--- a/Presentation/copilot.ipynb
+++ b/Presentation/copilot.ipynb
@@ -5,13 +5,13 @@
    "id": "5dde8f16",
    "metadata": {},
    "source": [
-    "Build a simple command line style tool in Python to work with CSV files in the first cell of copilot.ipynb\n",
+    "You are a Python Developer. Build a simple command line style tool in Python to work with CSV files in the first cell of copilot.ipynb\n",
     "\n",
     "Features:\n",
     "- `--convert` : Convert CSV to JSON\n",
     "- `--print`   : Pretty print as JSON\n",
     "- `--table`   : Display as ASCII table\n",
-    "- Later: add filtering, summaries, tests"
+    "- Later: add filtering, summaries"
    ]
   },
   {
