--- a/Presentation/ollamaRun.ipynb
+++ b/Presentation/ollamaRun.ipynb
@@ -35,6 +35,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8152bc99",
+   "metadata": {},
+   "source": [
+    "## Run via Command Line using **ollama run <model_name>**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "068b5c60",
    "metadata": {},
    "source": [
@@ -299,7 +307,11 @@
    "id": "601734df",
    "metadata": {},
    "source": [
-    "## Chatbots"
+    "## 🤖 Chatbots  \n",
+    "\n",
+    "- 👉 Chatbots built with **LLaMA (via Ollama)** can hold multi-turn conversations by storing previous messages in a `chat_history`.  \n",
+    "- 👉 This context allows the model to remember what was said earlier, respond consistently, and act more naturally — just like a real conversation.  \n",
+    "- 👉 By keeping both user and assistant messages, the chatbot can provide follow-up answers without losing track of the discussion.  \n"
    ]
   },
   {
@@ -458,7 +470,23 @@
    "id": "7319e91d",
    "metadata": {},
    "source": [
-    "## Summarization"
+    "## Summarization\n",
+    "\n",
+    "- **Summarization** is the process of condensing long text into a shorter version while preserving key meaning.  \n",
+    "- Two main types:  \n",
+    "\n",
+    "### ✨ Abstractive Summarization  \n",
+    "- Generates new sentences, like how a human would rephrase.  \n",
+    "- Focuses on **capturing meaning**, not just copying.  \n",
+    "- **Example:**  \n",
+    "  - Original: *“Alice went to the store to buy some fruits like apples and bananas.”*  \n",
+    "  - Abstractive: *“Alice bought fruits from the store.”*  \n",
+    "\n",
+    "### 📑 Extractive Summarization  \n",
+    "- Picks key sentences or phrases directly from the text.  \n",
+    "- No rephrasing — it’s more like **highlighting important parts**.  \n",
+    "- **Example:**  \n",
+    "  - Extracted: *“Alice went to the store to buy some fruits like apples and bananas.”*  \n"
    ]
   },
   {
@@ -518,7 +546,14 @@
    "id": "52809f68",
    "metadata": {},
    "source": [
-    "## Temperature"
+    "## 🌡️ Temperature in LLMs  \n",
+    "\n",
+    "- 👉 **Temperature** is a parameter that controls the **randomness** of model outputs.  \n",
+    "- 👉 Lower values (e.g., `0.1` or `0.2`) → more **focused, deterministic, and repetitive** answers.  \n",
+    "- 👉 Higher values (e.g., `0.8` or `1.0`) → more **creative, diverse, but less predictable** responses.  \n",
+    "- 👉 Choosing the right temperature depends on the task:  \n",
+    "  - Low for factual tasks (e.g., summarization, Q&A).  \n",
+    "  - High for creative tasks (e.g., story writing, brainstorming).  \n"
    ]
   },
   {
