--- a/Presentation/prompts.ipynb
+++ b/Presentation/prompts.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "04af4a06",
+   "metadata": {},
+   "source": [
+    "# 📝 Prompt Engineering  \n",
+    "\n",
+    "- 👉 **Prompt Engineering** is the practice of designing effective prompts (inputs) to guide large language models (LLMs) toward the desired output.  \n",
+    "- 👉 It reduces ambiguity, improves accuracy, and makes AI systems more reliable.  \n",
+    "- 👉 Common techniques include:  \n",
+    "  - **Clear Instructions** → helps the model stay on task.  \n",
+    "  - **Role/Persona** → makes the model act as a specific expert.  \n",
+    "  - **Few-Shot Examples** → show the model how to respond.  \n",
+    "  - **Output Format Specification** → easier to use results in code.  \n",
+    "  - **Conditions** → handle edge cases with rules.  \n",
+    "  - **Chain of Thought** → encourage step-by-step reasoning.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "80045825",
@@ -38,7 +56,17 @@
    "id": "218580b9",
    "metadata": {},
    "source": [
-    "## Using Delimiters"
+    "## ✂️ Using Delimiters  \n",
+    "\n",
+    "- 👉 **Delimiters** (like triple quotes `\"\"\"`, backticks ```, or XML tags `<tag></tag>`) clearly separate instructions, input, and output.  \n",
+    "- 👉 They help prevent **prompt injection** — when malicious input tries to trick the model into ignoring your instructions.  \n",
+    "- 👉 Example:  \n",
+    "  - Prompt: *Summarize the following text delimited by triple quotes:*  \n",
+    "    ```  \n",
+    "    \"\"\"  \n",
+    "    Alice went to the store and bought apples, bananas, and grapes.  \n",
+    "    \"\"\"  \n",
+    "    ``` "
    ]
   },
   {
@@ -111,7 +139,13 @@
    "id": "64cfd892",
    "metadata": {},
    "source": [
-    "## Clear Instructions"
+    "## ✅ Clear Instructions  \n",
+    "\n",
+    "- 👉 Clear instructions help the model understand your intent better.  \n",
+    "- 👉 They reduce ambiguity and guide the model to produce more accurate responses.  \n",
+    "- 👉 Example:  \n",
+    "  - ❌ Vague: *\"Write about Python.\"*  \n",
+    "  - ✅ Clear: *\"Write a 3-sentence overview of Python focusing on why it is popular for data science.\"*  \n"
    ]
   },
   {
@@ -174,7 +208,12 @@
    "id": "db961947",
    "metadata": {},
    "source": [
-    "## Using a role or a persona"
+    "## 🎭 Using a Role or Persona  \n",
+    "\n",
+    "- 👉 Assigning a **role or persona** guides the model to respond in a specific style or expertise.  \n",
+    "- 👉 This helps control **tone, depth, and perspective** — like asking it to act as a teacher, doctor, or coder.  \n",
+    "- 👉 Example:  \n",
+    "  - Prompt: *\"You are a Python tutor. Explain what a dictionary is with a simple example.\"*  "
    ]
   },
   {
@@ -223,7 +262,18 @@
    "id": "835c67ed",
    "metadata": {},
    "source": [
-    "## Few-Shot Examples"
+    "## ✨ Few-Shot Examples  \n",
+    "\n",
+    "- 👉 Few-shot prompting means showing the model a few **input–output examples** before your actual query.  \n",
+    "- 👉 This helps the model learn the **pattern** and produce more accurate, consistent results.  \n",
+    "- 👉 Example:  \n",
+    "  - Prompt:  \n",
+    "    - Q: What is 2 + 2?  \n",
+    "      A: 4  \n",
+    "    - Q: What is 3 + 5?  \n",
+    "      A: 8  \n",
+    "    - Q: What is 7 + 6?  \n",
+    "      A:  \n"
    ]
   },
   {
@@ -267,7 +317,20 @@
    "id": "cbf02ab0",
    "metadata": {},
    "source": [
-    "## Specify Output Format"
+    "## 📊 Specify Output Format  \n",
+    "\n",
+    "- 👉 Instructing the model to return answers in a specific format (like **JSON, CSV, or bullet points**) makes results easier to parse and reuse in code.  \n",
+    "- 👉 This reduces **post-processing effort** and ensures the output integrates smoothly with your application.  \n",
+    "- 👉 Example:  \n",
+    "  - Prompt: *\"Give me three fruits in JSON format with their colors.\"*  \n",
+    "  - Output:  \n",
+    "    ```json\n",
+    "    [\n",
+    "      {\"fruit\": \"Apple\", \"color\": \"Red\"},\n",
+    "      {\"fruit\": \"Banana\", \"color\": \"Yellow\"},\n",
+    "      {\"fruit\": \"Grapes\", \"color\": \"Green\"}\n",
+    "    ]\n",
+    "    ```  \n"
    ]
   },
   {
@@ -320,7 +383,12 @@
    "id": "c459ef40",
    "metadata": {},
    "source": [
-    "## Giving conditions"
+    "## ⚖️ Giving Conditions  \n",
+    "\n",
+    "- 👉 Adding **conditions** in prompts (e.g., *“only if…, otherwise…”*) guides the model to follow rules and handle edge cases.  \n",
+    "- 👉 This ensures more **controlled, reliable responses** instead of generic outputs.  \n",
+    "- 👉 Example:  \n",
+    "  - Prompt: *\"If the input is a number greater than 10, respond with 'Valid'. Otherwise, respond with 'Invalid'.\"*  \n"
    ]
   },
   {
@@ -360,7 +428,14 @@
    "id": "80ff028b",
    "metadata": {},
    "source": [
-    "## Chain of Thought (Giving the model time to think)"
+    "## 🧠 Chain of Thought (Giving the Model Time to Think)  \n",
+    "\n",
+    "- 👉 Chain of Thought prompting encourages the model to **reason step by step** instead of jumping to the final answer.  \n",
+    "- 👉 This “giving the model time to think” approach improves accuracy, especially for **math, logic, or multi-step tasks**.  \n",
+    "- 👉 Example:  \n",
+    "  - Prompt: *\"Solve step by step: A train travels 60 km in 1.5 hours. What is its speed?\"*  \n",
+    "  - Model (thinking): *\"Speed = Distance / Time → 60 / 1.5 = 40\"*  \n",
+    "  - Final Answer: *\"The train’s speed is 40 km/h.\"*  \n"
    ]
   },
   {
@@ -410,13 +485,18 @@
    "id": "8256cfd9",
    "metadata": {},
    "source": [
-    "# RISEN Framework\n",
-    "## RISEN is a mnemonic, which stands for:\n",
-    "1. ROLE\n",
-    "2. INSTRUCTION\n",
-    "3. STEPS\n",
-    "4. END GOAL\n",
-    "5. NARROWING"
+    "# 🚀 RISEN Framework  \n",
+    "\n",
+    "RISEN is a **prompt engineering mnemonic** that helps structure effective prompts.  \n",
+    "\n",
+    "## ✅ Stands for:  \n",
+    "1. **Role** → Assign a role or persona (e.g., \"You are a data analyst...\").  \n",
+    "2. **Instruction** → Give clear, specific instructions.  \n",
+    "3. **Steps** → Break down the task into logical steps.  \n",
+    "4. **End Goal** → Define the desired outcome or final answer format.  \n",
+    "5. **Narrowing** → Add constraints or conditions to avoid vague answers.  \n",
+    "\n",
+    "👉 Using RISEN ensures prompts are **clear, controlled, and goal-oriented**.  \n"
    ]
   },
   {
